test/asm/def-scoped.err
error: def-scoped.asm(10):
    syntax error, unexpected local label, expecting symbol
error: def-scoped.asm(13):
    syntax error, unexpected local label, expecting symbol
error: def-scoped.asm(16):
    syntax error, unexpected local label, expecting symbol
Assembly aborted with 3 errors!
